Bug 91795 - Render box that filled with gradient color always use black gradient
Summary: Render box that filled with gradient color always use black gradient
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
4.4.2.2 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-01 14:54 UTC by Mark Hung
Modified: 2017-04-13 13:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison of the result for LO and OO (14.51 KB, image/png)
2015-06-01 14:54 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2015-06-01 14:54:51 UTC
Created attachment 116225 [details]
Comparison of the result for LO and OO

Enter example code in the section "Gradient Color":
https://wiki.openoffice.org/wiki/Documentation/BASIC_Guide/Structure_of_Drawings

It always render a black gradient.
Comment 1 Buovjaga 2015-06-09 11:25:01 UTC
(In reply to Mark Hung from comment #0)
> Created attachment 116225 [details]
> Comparison of the result for LO and OO
> 
> Enter example code in the section "Gradient Color":
> https://wiki.openoffice.org/wiki/Documentation/BASIC_Guide/
> Structure_of_Drawings
> 
> It always render a black gradient.

Reproduced with the code in Color Gradient.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: d28102b1ed0c31500bbc68453a7b7613bd2bfa06
TinderBox: Win-x86@39, Branch:master, Time: 2015-06-09_01:06:39
Locale: fi-FI (fi_FI)
Comment 2 QA Administrators 2016-09-20 10:01:02 UTC Comment hidden (obsolete)
Comment 3 Mark Hung 2016-09-21 15:44:18 UTC
Still reproducible

Version:5.2.1.2
Build ID:31dd62db80d4e60af04904455ec9c9219178d620
CPU Thread:8; OS Ver:Windows 6.2
Locale:zh-TW (zh_TW);
Comment 4 Commit Notification 2017-02-02 21:12:42 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb9b9c28ed32cacb5ed0410875af2ec03345fbf9

tdf#91795: prevent default item overwrite actual values.

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2017-04-13 09:10:42 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?