tdf#91795: prevent default item overwrite actual values.

A few properties of FillProeprties have the same nWID
but have different nMemberId, such as FillGradient,
FillGradientName,FillHatch,FillHatchName, FillBitmap,
FillBitmapName, and FillBitmapURL.

When putting value of an item, the default item was put
first, despite the value of the item might have already
been put.

Move the part of the code that put default item upfront
so that it will not overwrite actual value accidentally.

Change-Id: I54288420abde333e5b3e4cdd31ca9fae0c3ed7ab